beginning html and css

--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<link href="../338_02_L5_DeOsuna/css/styles.css" rel="stylesheet" type="text/css">
-		<title>Hydro Flask</title>
+	<link rel="stylesheet" type="text/css" href="css/styles.css"/>
+	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+		<title>Katdraw's Shop</title>
 	</head>
 	<body>
+	<h1>Katdraw's Shop</h1>
 	<nav>
 		<ul>
-			<li><a href="../338_02_L5_DeOsuna/index.html">Home</a></li>
-			<li><a href="../338_02_L5_DeOsuna/index.html">Shop</a></li>
-			<li><a href="../338_02_L5_DeOsuna/index.html">Customize</a></li>
-			<li><a href="../338_02_L5_DeOsuna/index.html">Innovation</a>	</li>
-			<li><a href="../338_02_L5_DeOsuna/contact.html">Our Story &amp; Contact</a></li>
+			<li><a href="index.html">Home</a></li>
+			<li><a href=>Shop</a></li>
+			<li><a href=>About</a></li>
+			<li><a href=>Contact</a></li>
 		</ul>
 	</nav>
 	
