--- a/index.html
+++ b/index.html
@@ -8,14 +8,24 @@
 	<body>
 	<h1>Katdraw's Shop</h1>
 	<nav>
+	<!--nav bar is float: right, which is why these are backwards-->
 		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href=>Shop</a></li>
-			<li><a href=>About</a></li>
 			<li><a href=>Contact</a></li>
+			<li><a href=>About</a>
+			</li>
+			<li><a href=>Shop</a></li>
+			<li><a href="index.html">Home</a></li>
 		</ul>
 	</nav>
+		<img class="mainimg" src="images/pinkflowers.jpg"/>
+	<div>
+	<img src="images/purple-succulent.jpg" class="subimg"/>
+	<img src="images/hand-and-succulent.jpg" class="subimg" /><img src="images/tan-paper-plant.jpg" class="subimg"/>
 	
-		
+	</div>
+			
 	</body>
+	<footer>
+		<p>&copy; 2017 Katherine DeOsuna </p>
+	</footer>
 </html>
