added comments into html and css

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 			<li><a href="index.html">Home</a></li>
 		</ul>
 	</nav>
-		<img class="mainimg" src="images/pinkflowers.jpg"/>
-	<div>
-	<img src="images/purple-succulent.jpg" class="subimg"/>
-	<img src="images/hand-and-succulent.jpg" class="subimg" /><img src="images/tan-paper-plant.jpg" class="subimg"/>
-	
+	<img class="mainimg" src="images/pinkflowers.jpg"/>
+	<div class="subimg">
+		<img src="images/purple-succulent.jpg" />
+		<img src="images/hand-and-succulent.jpg" />
+		<img src="images/tan-paper-plant.jpg" />
 	</div>
 			
 	</body>
