add about.html page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<head>
 	<link rel="stylesheet" type="text/css" href="css/styles.css"/>
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-		<title>Katdraw's Shop</title>
+	<!--fill in name. I need to think of a better one-->
+	<title>Katdraw's Shop</title>
 	</head>
 	<body>
 	<h1>Katdraw's Shop</h1>
@@ -11,13 +12,15 @@
 	<!--nav bar is float: right, which is why these are backwards-->
 		<ul>
 			<li><a href=>Contact</a></li>
-			<li><a href=>About</a>
+			<li><a href="about.html">About</a>
 			</li>
 			<li><a href=>Shop</a></li>
 			<li><a href="index.html">Home</a></li>
 		</ul>
 	</nav>
+
 	<img class="mainimg" src="images/pinkflowers.jpg"/>
+	<!--three aligned images that are centered-->
 	<div class="subimg">
 		<img src="images/purple-succulent.jpg" />
 		<img src="images/hand-and-succulent.jpg" />
