add content to contact page

--- a/index.html
+++ b/index.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
 <html>
-	<head>
+<head>
 	<link rel="stylesheet" type="text/css" href="css/styles.css"/>
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 	<!--fill in name. I need to think of a better one-->
 	<title>Katdraw's Shop</title>
-	</head>
-	<body>
+</head>
+	
+<body>
 	<h1>Katdraw's Shop</h1>
 	<nav>
 	<!--nav bar is float: right, which is why these are backwards-->
 		<ul>
-			<li><a href=>Contact</a></li>
+			<li><a href="#shop">Contact</a></li>
 			<li><a href="about.html">About</a>
 			</li>
-			<li><a href=>Shop</a></li>
+			<li class="dropdown"><a href="#shop">Shop</a></li>
 			<li><a href="index.html">Home</a></li>
 		</ul>
 	</nav>
 
-	<img class="mainimg" src="images/pinkflowers.jpg"/>
+	<img class="mainimg" src="images/pinkflowers.jpg" alt="pink flowers watercolor on black background"/>
 	<!--three aligned images that are centered-->
 	<div class="subimg">
-		<img src="images/purple-succulent.jpg" />
-		<img src="images/hand-and-succulent.jpg" />
-		<img src="images/tan-paper-plant.jpg" />
+		<img src="images/purple-succulent.jpg" alt=" purple succulent watercolor painting"/>
+		<img src="images/hand-and-succulent.jpg" alt="ink drawing of hand holding a potted succulent"  />
+		<img src="images/tan-paper-plant.jpg" alt="ink drawing of plant on tan paper"/>
 	</div>
-			
-	</body>
-	<footer>
+</body>
+	
+<footer>
 		<p>&copy; 2017 Katherine DeOsuna </p>
-	</footer>
+</footer>
 </html>
