--- a/about.html
+++ b/about.html
@@ -11,13 +11,18 @@
 	<nav>
 	<!--nav bar is float: right, which is why these are backwards-->
 		<ul>
-			<li><a href=>Contact</a></li>
+			<li><a href="#contact">Contact</a></li>
 			<li><a href="about.html">About</a>
 			</li>
-			<li><a href=>Shop</a></li>
+			<li><a href="#shop">Shop</a></li>
 			<li><a href="index.html">Home</a></li>
 		</ul>
 	</nav>
+	<h1>Hello!</h1>
+	<img src="images/me-standing.jpg" alt="Katherine standing on a rock" class="about"/>
+	<p class="abouttxt">
+		As a college student, I find solace from my busy life through watercolor and embroidery. I want to share my joy (and maybe make a little dough) with others who appreciate art in the same way.
+	</p>
 </body>
 
 <footer>
