--- a/index.html
+++ b/index.html
@@ -8,15 +8,21 @@
 </head>
 	
 <body>
-	<h1>Katdraw's Shop</h1>
+	<img src="images/filler-image.jpg" alt="filler image" id="logo"/>
+	<h1>Katdraw's Shop
+	
+	
+	</h1>
 	<nav>
 	<!--nav bar is float: right, which is why these are backwards-->
 		<ul>
-			<li><a href="#shop">Contact</a></li>
-			<li><a href="about.html">About</a>
-			</li>
-			<li class="dropdown"><a href="#shop">Shop</a></li>
 			<li><a href="index.html">Home</a></li>
+			
+			<li><a href="#shop">Shop</a></li>
+			
+			<li><a href="about.html">About</a></li>
+			
+			<li><a href="#shop">Contact</a></li>
 		</ul>
 	</nav>
 
