work on footer links

--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,46 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Untitled Document</title>
+	<link rel="stylesheet" type="text/css" href="css/styles.css"/>
+	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+	<title>Contact</title>
 </head>
 
 <body>
+	<img src="images/filler-image.jpg" alt="filler image" id="logo"/>
+	
+	
+	<nav>
+	<!--nav bar is float: right, which is why these are backwards-->
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			
+			<li><a href="shop.html">Shop</a></li>
+			
+			<li><a href="about.html">About</a></li>
+			
+			<li><a href="contact.html">Contact</a></li>
+		</ul>
+	</nav>
+	
+	<h1>Contact Me</h1>
+	<img class="mainimg" src="images/filler-image.jpg" alt="filler img" />
+	
+	<p>Check out my Instagram for updates and works in progress.</p>
+	<p>You can reach me by email at  katherinedeosuna@gmail.com.</p>
+	
+	<form>
+		<!--create form for people to submit name, email, and comment-->
+	</form>
 </body>
+
+<footer>
+	<!--I need to figure out how to make the font awesome icons show up-->
+	<i class="fa fa-instagram" aria-hidden="true"></i>
+		
+	<a href="https://www.instagram.com/katdrawsca/?hl=en" target="_blank">Instagram</a>
+	<a href="https://www.linkedin.com/in/katherine-deosuna" target="_blank">LinkedIn</a>
+		
+	<p>&copy; 2017 Katherine DeOsuna </p>
+</footer>
 </html>
