--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="css/styles.css"/>
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 	<!--fill in name. I need to think of a better one-->
 	<title>Katdraw's Shop</title>
 </head>
 	
 <body>
 	<img src="images/filler-image.jpg" alt="filler image" id="logo"/>
-	<h1>Katdraw's Shop
 	
-	
-	</h1>
 	<nav>
-	<!--nav bar is float: right, which is why these are backwards-->
+	<!--nav bar is centered-->
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			
@@ -36,6 +34,9 @@
 </body>
 	
 <footer>
+		<i class="fa fa-instagram" aria-hidden="true"></i>
+		<a href="https://www.instagram.com/katdrawsca/?hl=en" target="_blank">Instagram</a>
+		<a href="https://www.linkedin.com/in/katherine-deosuna" target="_blank">LinkedIn</a>
 		<p>&copy; 2017 Katherine DeOsuna </p>
 </footer>
 </html>
