failed at trying to use java script for a cool nav bar

--- a/index.html
+++ b/index.html
@@ -2,29 +2,30 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="css/styles.css"/>
-	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Kadwa:400,700" rel="stylesheet">
 	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!--fill in name. I need to think of a better one-->
-	<title>Katdraw's Shop</title>
+	<title>deosuna arts + crafts</title>
 </head>
 	
 <body>
-	<img src="images/filler-image.jpg" alt="filler image" id="logo"/>
-	
 	<nav>
-	<!--nav bar is centered-->
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			
-			<li><a href="#shop">Shop</a></li>
-			
-			<li><a href="about.html">About</a></li>
-			
+  		<div>   		
+  			<img src="images/deosuna-crafts-logo.gif" alt="deosuna arts and crafts logo" id="logo"/>
+		</div>
+   		<div>
+  		<ul>
 			<li><a href="#shop">Contact</a></li>
+			<li><a href="about.html">About</a></li>
+			<li><a href="#shop">Shop</a></li>
+			<li><a href="index.html">Home</a></li>
 		</ul>
+		</div>
+		
 	</nav>
-
+	
+	
+	
 	<img class="mainimg" src="images/pinkflowers.jpg" alt="pink flowers watercolor on black background"/>
 	<!--three aligned images that are centered-->
 	<div class="subimg">
