--- a/Shop.html
+++ b/Shop.html
@@ -2,9 +2,28 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Untitled Document</title>
+<link rel="stylesheet" type="text/css" href="css/styles.css"/>
+	<link href="https://fonts.googleapis.com/css?family=Kadwa:400,700" rel="stylesheet">
+	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!--fill in name. I need to think of a better one-->
+	<title>deosuna arts + crafts</title>
 </head>
 
 <body>
+	<nav>
+	<!--nav bar is centered-->
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			
+			<li><a href="#shop">Shop</a></li>
+			
+			<li><a href="about.html">About</a></li>
+			
+			<li><a href="#shop">Contact</a></li>
+		</ul>
+	</nav>
+	
+	<img src="images/deosuna-crafts-logo.gif" alt="logo" id="logo"/>
 </body>
 </html>
