--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
   		<ul>
 			<li><a href="#shop">Contact</a></li>
 			<li><a href="about.html">About</a></li>
-			<li><a href="#shop">Shop</a></li>
+			<li><a href="#shop">Shop</a>
+				<ul>
+					<li a href="#">Paintings</li>
+					<li a href="#">Embroidery</li>
+				</ul>
+			</li>
 			<li><a href="index.html">Home</a></li>
 		</ul>
 		</div>
