added images to paintings page

--- a/shop_paintings.html
+++ b/shop_paintings.html
@@ -34,7 +34,7 @@
 		</div>
 		
 	</nav>
-	<div>
+	<div class="grid">
 		<img src="images/green and orange succulent img.jpg" alt="green and orange succulent watercolor painting"/> 
 		<img src="images/purple succulent img.jpg" alt="purple succulent watercolor painting"/>
 		<img src="images/orange succulent img.jpg" alt="orange succulent watercolor painting"/>
