--- a/contact.html
+++ b/contact.html
@@ -25,8 +25,7 @@
 	</nav>
 	
 	<h1>Contact Me</h1>
-	<img class="mainimg" src="images/filler-image.jpg" alt="filler img" />
-	
+	<img src="mountain and skeleton ebroidery scene.jpg" alt="mountain embroidery and skeleton embroidery scene"/>
 	<p>Check out my Instagram for updates and works in progress.</p>
 	<p>You can reach me by email at  katherinedeosuna@gmail.com.</p>
 	
