--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	
 	
 	<div>
-	<img class="mainimg" src="mountain and skeleton ebroidery horizontal.jpg" alt="mountain and skeleton embroidery"/>
+	<img class="mainimg" src="images/mountain and skeleton ebroidery horizontal.jpg" alt="mountain and skeleton embroidery"/>
 	</div>
 	<!--three aligned images that are centered-->
 	<div class="subimg">
@@ -42,13 +42,12 @@
 </body>
 	
 <footer>
-	<span class="icons">
+	
 		<i>
 			<a href="https://www.instagram.com/katdrawsca/?hl=en" class="fa fa-instagram fa-2x" aria-hidden="true" target="_blank"> </a>
 		</i>
 		<i>
-			<a href="https://www.linkedin.com/in/katherine-deosuna" class="fa fa-linkedin-square fa-2x" aria-hidden="true" target="_blank"> </a></i>
-	</span>	
-		<p>&copy; 2017 Katherine DeOsuna </p>
+			<a href="https://www.linkedin.com/in/katherine-deosuna" class="fa fa-linkedin-square fa-2x" aria-hidden="true" target="_blank"> </a></i>	
+		<p id="smalltext">&copy; website + images by Katherine DeOsuna 2017 </p>
 </footer>
 </html>
