--- a/about.html
+++ b/about.html
@@ -1,28 +1,35 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/styles.css"/>
-	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-	<title>About</title>
+	<link href="https://fonts.googleapis.com/css?family=Kadwa:400,700" rel="stylesheet">
+	<script src="https://use.fontawesome.com/fbb68233eb.js"></script>
+	<title>deosuna arts + crafts</title>
 </head>
-
-<body>
-	<img src="images/filler-image.jpg" alt="filler image" id="logo"/>
 	
+<body>
+
 	<nav>
-	<!--nav bar is float: right, which is why these are backwards-->
-		<ul>
+		<ul id="drop-nav">
 			<li><a href="index.html">Home</a></li>
-			
-			<li><a href="shop.html">Shop</a></li>
-			
-			<li><a href="about.html">About</a></li>
-			
+			<li><a href="#">Shop</a></li>
+				<ul>
+					<li><a href="shop_paintings.html"
+					>Paintings</a></li>
+					
+					<li><a href="#">Embroidery</a></li>
+				</ul>
 			<li><a href="contact.html">Contact</a></li>
+			<li><a href="about.html">About</a></li>
+			<!--dropdown in nav for shop pages-->
+			
+			
 		</ul>
 	</nav>
-	<h1>About the Artist</h1>
+	
+	<img src="images/deosuna-crafts-logo.gif" alt="deosuna arts and crafts logo" id="logo"/>
+	
+	<h1>about the artist</h1>
 	<img src="images/me-standing.jpg" alt="Katherine standing on a rock" id="aboutimg"/>
 	<p id="abouttxt">
 		As a college student, I find solace from my busy life through watercolor and embroidery. I want to share my joy (and maybe make a little dough) with others who appreciate art in the same way.
@@ -30,6 +37,10 @@
 </body>
 
 <footer>
-	<p>&copy; 2017 Katherine DeOsuna </p>
-</footer>
+	<p>&copy; 2017 Katherine DeOsuna </p><i>
+			<a href="https://www.instagram.com/katdrawsca/?hl=en" class="fa fa-instagram fa-2x" aria-hidden="true" target="_blank"> </a>
+		</i>
+		<i>
+			<a href="https://www.linkedin.com/in/katherine-deosuna" class="fa fa-linkedin-square fa-2x" aria-hidden="true" target="_blank"> </a></i>	
+		<p id="smalltext">&copy; website + images by Katherine DeOsuna 2017 </p>oter>
 </html>
