final update, finshed about page and comments

--- a/about.html
+++ b/about.html
@@ -12,12 +12,12 @@
 	<nav>
 		<ul id="drop-nav">
 			<li><a href="index.html">Home</a></li>
-			<li><a href="#">Shop</a></li>
+			<li><a href="shop_embroidery.html">Shop</a></li>
 				<ul>
 					<li><a href="shop_paintings.html"
 					>Paintings</a></li>
 					
-					<li><a href="#">Embroidery</a></li>
+					<li><a href="shop_embroidery.html">Embroidery</a></li>
 				</ul>
 			<li><a href="contact.html">Contact</a></li>
 			<li><a href="about.html">About</a></li>
@@ -30,17 +30,22 @@
 	<img src="images/deosuna-crafts-logo.gif" alt="deosuna arts and crafts logo" id="logo"/>
 	
 	<h1>about the artist</h1>
-	<img src="images/me-standing.jpg" alt="Katherine standing on a rock" id="aboutimg"/>
-	<p id="abouttxt">
-		As a college student, I find solace from my busy life through watercolor and embroidery. I want to share my joy (and maybe make a little dough) with others who appreciate art in the same way.
-	</p>
+	<div>
+		<img src="images/me-standing.jpg" alt="Katherine standing on a rock" id="aboutimg"/>
+		<p id="abouttxt">
+		Katherine DeOsuna is a soon-to-be-senior at Cal Poly. As a Graphic Communications major she indugles heavily in all things design.  Katherine finds solace through watercolor and embroidery. She wants to share her joy (and maybe make a little dough) with others who appreciate art in the same way.
+		</p>
+	</div>
+	
+	
 </body>
 
 <footer>
-	<p>&copy; 2017 Katherine DeOsuna </p><i>
+		<i>
 			<a href="https://www.instagram.com/katdrawsca/?hl=en" class="fa fa-instagram fa-2x" aria-hidden="true" target="_blank"> </a>
 		</i>
 		<i>
 			<a href="https://www.linkedin.com/in/katherine-deosuna" class="fa fa-linkedin-square fa-2x" aria-hidden="true" target="_blank"> </a></i>	
-		<p id="smalltext">&copy; website + images by Katherine DeOsuna 2017 </p>oter>
+		<p id="smalltext">&copy; website + images by Katherine DeOsuna 2017 </p>
+	</footer>
 </html>
