--- a/contact.html
+++ b/contact.html
@@ -12,12 +12,12 @@
 	<nav>
 		<ul id="drop-nav">
 			<li><a href="index.html">Home</a></li>
-			<li><a href="#">Shop</a></li>
+			<li><a href="shop_embroidery.html">Shop</a></li>
 				<ul>
 					<li><a href="shop_paintings.html"
 					>Paintings</a></li>
 					
-					<li><a href="#">Embroidery</a></li>
+					<li><a href="shop_embroidery.html">Embroidery</a></li>
 				</ul>
 			<li><a href="contact.html">Contact</a></li>
 			<li><a href="about.html">About</a></li>
