--- a/index.html
+++ b/index.html
@@ -17,13 +17,11 @@
 					<li><a href="shop_paintings.html"
 					>Paintings</a></li>
 					
-					<li><a href="#">Embroidery</a></li>
+					<li><a href="shop_embroidery.html">Embroidery</a></li>
 				</ul>
 			<li><a href="contact.html">Contact</a></li>
 			<li><a href="about.html">About</a></li>
-			<!--dropdown in nav for shop pages-->
-			
-			
+			<!--I could not get the dropdown menue to work, so I left shop as an empty # -->
 		</ul>
 	</nav>
 	
