--- a/shop_embroidery.html
+++ b/shop_embroidery.html
@@ -17,7 +17,7 @@
 					<li><a href="shop_paintings.html"
 					>Paintings</a></li>
 					
-					<li><a href="#">Embroidery</a></li>
+					<li><a href="shop_embroidery.html">Embroidery</a></li>
 				</ul>
 			<li><a href="contact.html">Contact</a></li>
 			<li><a href="about.html">About</a></li>
@@ -30,45 +30,69 @@
 	<img src="images/deosuna-crafts-logo.gif" alt="deosuna arts and crafts logo" id="logo"/>
 	
 	<h1>embroderies + patches</h1>
-	
+	<!--I used filler images because I do not have enough actual embroidered work quite yet. These images are all mine.-->
 		<figure>
-			<img class="shopimg" src="images/green and orange succulent img.jpg" alt="green and orange succulent watercolors painting"/> 
-			<figcaption>Purple succulent
+			<img class="shopimg" src="images/green and orange succulent img.jpg" alt="green and orange succulent watercolor painting"/> 
+			<figcaption>
+			<p>green succulent</p>
+				<p>original embroidery</p>
+				<p>$150.00</p>
 			</figcaption>
 		</figure>
 		<figure>
 			<img src="images/purple succulent img.jpg" class="shopimg" alt="purple succulent watercolor painting"/>
-			<figcaption> purple succulent</figcaption>
+			<figcaption> 
+				<p>purple succulent</p>
+				<p>handmade embroidered patch </p>
+				<p>$30.00</p>
+			</figcaption>
 		</figure>
 		<figure>
 			<img src="images/orange succulent img.jpg" class="shopimg" alt="orange succulent watercolor painting"/>
-			<figcaption>orange succulent</figcaption>
+			<figcaption>	<p>orange succulent</p>
+				<p>original embroidery</p>
+				<p>$50.00</p></figcaption>
 		</figure> 
 		<figure>
 			<img class="shopimg" src="images/green and orange succulent img.jpg" alt="green and orange succulent watercolor painting"/> 
-			<figcaption>Purple succulent
+			<figcaption>
+				<p>green succulent</p>
+				<p>handmade embroidered patch</p>
+				<p>$40.00</p>
 			</figcaption>
 		</figure>
 		<figure>
 			<img src="images/purple succulent img.jpg" class="shopimg" alt="purple succulent watercolor painting"/>
-			<figcaption> purple succulent</figcaption>
+			<figcaption> 	<p>purple succulent</p>
+				<p>original embroidery</p>
+				<p>$100.00</p></figcaption>
 		</figure>
 		<figure>
 			<img src="images/orange succulent img.jpg" class="shopimg" alt="orange succulent watercolor painting"/>
-			<figcaption>orange succulent</figcaption>
+			<figcaption>	<p>orange succulent</p>
+				<p>handmade embroidered patch</p>
+				<p>$100.00</p></figcaption>
 		</figure> 
 	<figure>
 			<img class="shopimg" src="images/green and orange succulent img.jpg" alt="green and orange succulent watercolor painting"/> 
-			<figcaption>Purple succulent
+			<figcaption>			<p>green 		succulent</p>
+				<p>original embroidery</p>
+				<p>$100.00</p>
 			</figcaption>
 		</figure>
 		<figure>
 			<img src="images/purple succulent img.jpg" class="shopimg" alt="purple succulent watercolor painting"/>
-			<figcaption> purple succulent</figcaption>
+			<figcaption> 	
+				<p>purple succulent</p>
+				<p>handmade embroidered patch</p>
+				<p>$100.00</p>
+			</figcaption>
 		</figure>
 		<figure>
 			<img src="images/orange succulent img.jpg" class="shopimg" alt="orange succulent watercolor painting"/>
-			<figcaption>orange succulent</figcaption>
+			<figcaption>	<p>orange succulent</p>
+				<p>handmade embroidered patch</p>
+				<p>$100.00</p></figcaption>
 		</figure> 
 
 </body>
