--- a/shop_paintings.html
+++ b/shop_paintings.html
@@ -13,63 +13,82 @@
 	<nav>
 		<ul id="drop-nav">
 			<li><a href="index.html">Home</a></li>
-			<li><a href="#">Shop</a></li>
+			<li><a href="shop_embroidery.html">Shop</a></li>
 				<ul>
 					<li><a href="shop_paintings.html"
 					>Paintings</a></li>
 					
-					<li><a href="#">Embroidery</a></li>
+					<li><a href="shop_embroidery.html">Embroidery</a></li>
 				</ul>
 			<li><a href="contact.html">Contact</a></li>
 			<li><a href="about.html">About</a></li>
-			<!--dropdown in nav for shop pages-->
-			
-			
 		</ul>
 	</nav>
 	
 	<img src="images/deosuna-crafts-logo.gif" alt="deosuna arts and crafts logo" id="logo"/>
 	
 	<h1>paintings + drawings</h1>
-	
+	<!--Thesethree paintings will actually go on my website, but I did not have enough time to scan/take pictures of anything else. Therefore these paintings will be filler images for where the other art will eventually go.-->
 		<figure>
 			<img class="shopimg" src="images/green and orange succulent img.jpg" alt="green and orange succulent watercolor painting"/> 
-			<figcaption>Purple succulent
+			<figcaption>
+			<p>green succulent</p>
+				<p>original watercolor on cold press paper</p>
+				<p>$100.00</p>
 			</figcaption>
 		</figure>
 		<figure>
 			<img src="images/purple succulent img.jpg" class="shopimg" alt="purple succulent watercolor painting"/>
-			<figcaption> purple succulent</figcaption>
+			<figcaption> 
+				<p>purple succulent</p>
+				<p>original watercolor on cold press paper</p>
+				<p>$100.00</p>
+			</figcaption>
 		</figure>
 		<figure>
 			<img src="images/orange succulent img.jpg" class="shopimg" alt="orange succulent watercolor painting"/>
-			<figcaption>orange succulent</figcaption>
+			<figcaption>	<p>orange succulent</p>
+				<p>original watercolor on cold press paper</p>
+				<p>$100.00</p></figcaption>
 		</figure> 
 		<figure>
 			<img class="shopimg" src="images/green and orange succulent img.jpg" alt="green and orange succulent watercolor painting"/> 
-			<figcaption>Purple succulent
+			<figcaption>
+				<p>green succulent</p>
+				<p>original watercolor on cold press paper</p>
+				<p>$100.00</p>
 			</figcaption>
 		</figure>
 		<figure>
 			<img src="images/purple succulent img.jpg" class="shopimg" alt="purple succulent watercolor painting"/>
-			<figcaption> purple succulent</figcaption>
+			<figcaption> 	<p>purple succulent</p>
+				<p>original watercolor on cold press paper</p>
+				<p>$100.00</p></figcaption>
 		</figure>
 		<figure>
 			<img src="images/orange succulent img.jpg" class="shopimg" alt="orange succulent watercolor painting"/>
-			<figcaption>orange succulent</figcaption>
+			<figcaption>	<p>orange succulent</p>
+				<p>original watercolor on cold press paper</p>
+				<p>$100.00</p></figcaption>
 		</figure> 
 	<figure>
 			<img class="shopimg" src="images/green and orange succulent img.jpg" alt="green and orange succulent watercolor painting"/> 
-			<figcaption>Purple succulent
+			<figcaption>			<p>green 		succulent</p>
+				<p>original watercolor on cold press paper</p>
+				<p>$100.00</p>
 			</figcaption>
 		</figure>
 		<figure>
 			<img src="images/purple succulent img.jpg" class="shopimg" alt="purple succulent watercolor painting"/>
-			<figcaption> purple succulent</figcaption>
+			<figcaption> 	<p>purple succulent</p>
+				<p>original watercolor on cold press paper</p>
+				<p>$100.00</p></figcaption>
 		</figure>
 		<figure>
 			<img src="images/orange succulent img.jpg" class="shopimg" alt="orange succulent watercolor painting"/>
-			<figcaption>orange succulent</figcaption>
+			<figcaption>	<p>orange succulent</p>
+				<p>original watercolor on cold press paper</p>
+				<p>$100.00</p></figcaption>
 		</figure> 
 
 </body>
