forgot to add a submit button

--- a/contact.html
+++ b/contact.html
@@ -37,8 +37,13 @@
 		<p>message <textarea name="message" col="30" rows="5" size="30"> just say hello!</textarea></p>
 			
 		<p>i am not a robot <input type="radio" name="robot" value="no"/></p>
+		<form action="#">	
+			<input class="submit"  type="submit"
+			value="submit" />
+</form>
 	</form>
 	<p> i look forward to hearing from you!</p>
+	
 </body>
 
 <footer>
